Add laser fire mechanism and rotation
Co-authored-by: Shawn Cartwright <ponderosaprintingus@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Deathstar</title>
 </head>
 
 <body>
-
+    <div id="buttons">
+        <button id="rotate-ccw">Rotate CCW <i class="fa fa-rotate-left"></i></button>
+        <button id="fire">Fire</button>
+        <button id="rotate-cw"><i class="fa fa-rotate-right"></i> Rotate CW</button>
+    </div>
+    <img id="deathstar" src="img/deathstar.svg">
+    <img id="laser" src="img/laser.svg">
 </body>
+<script src="js/scripts.js"></script>
 
 </html>
